--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@ layout: welcome
 ---
 
  <div class="text-center">        
-  <img class="circular" src="http://scontent-a.cdninstagram.com/hphotos-xpa1/outbound-distilleryimage10/t0.0-17/OBPTH/dec0f3cc9a0e11e1b10e123138105d6b_7.jpg" >
-  <p>contact me <a href="mailto:user@example.com">user (at) example.com</a></p>
+  <img class="circular" src="images/local/circle.jpg" >
+  <p>Contact me <a href="mailto:yumna_ansari@hotmail.com">yumna_ansari@hotmail.com</a></p>
 </div>
