--- a/resume.html
+++ b/resume.html
@@ -48,7 +48,7 @@ layout: default
 
       <h4 class="text-muted">Senior Graduation Project: A Mathematical Video Game for ADHD Children to be used in Neurofeedback:</h4>
       <p> - The objective of the project was to design and develop an educational game for ADHD children
-      <p> - The game incorporates Neurofeedback by measuring the player's beta waves and providing feedback to the player
+      <p> - The game incorporated Neurofeedback by measuring the player's beta waves and providing feedback to the player
 
        <p>Links to projects will be added <a href="{{ "/projects" | prepend:site.baseurl }}">here</a>.</p>
       <h2>Leadership:</h2>
