Updated the CSS

--- a/resume.html
+++ b/resume.html
@@ -18,7 +18,7 @@ layout: default
         <p> - <span>C</span>++ <span>C</span># <span>C</span></p>
         <p> - <span>H</span>TML <span>C</span>SS <span>B</span>ootstrap</p>
         <p> - <span>J</span>avascript <span>J</span>ekyll</p>
-      <h4 class="text-muted">Software:</h4>
+      <h4 class="text-muted">b:</h4>
         <p> - <span>M</span>icrosoft <span>O</span>ffice</p>
         <p> - <span>V</span>issual <span>S</span>tudio <span>2</span>010</p>
         <p> - <span>E</span>clipse</p>
@@ -50,13 +50,14 @@ layout: default
       <p> - The objective of the project was to design and develop an educational game for ADHD children
       <p> - The game incorporated Neurofeedback by measuring the player's beta waves and providing feedback to the player
 
-       <p>Links to projects will be added <a href="{{ "/projects" | prepend:site.baseurl }}">here</a>.</p>
-      <h2>Leadership:</h2>
+       <p>Links to projects will be added <a href="{{ "/projects" | prepend:site.baseurl }}">here</a> in the future.</p>
+      <h2>Leadership</h2>
       <h4 class="text-muted">Co-founded Effat University Tech Society for 
       Effat Programmers:</h4>
       <p>The goal was to encourage students to share ideas, code & collaborate on projects using a version control system such as Git</p>
       <p>To introduce open source events and projects at Effat University</p>
-      <p>To create a fun and competitive environment for students to learn in</p>
+      <p>To create a fun and competitive environment for students to learn in</p> 
+      <p>The club website can be found <a href="http://euts.github.io">here</a></p>
     </div> 
 
     <div id="contacts">
