--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@ layout: welcome
 ---
 
  <div class="text-center">        
-  <img class="circular" src="images/local/circle.jpg" >
+  <img class="circular" src="images/local/tig.jpg" >
   <p>Contact me <a href="mailto:yumna_ansari@hotmail.com">yumna_ansari@hotmail.com</a></p>
 </div>
