--- a/projects.html
+++ b/projects.html
@@ -7,7 +7,7 @@ layout: projects
 <a href="{{ '/' | prepend: site.baseurl | replace: '//', '/' }}"><i class="fa fa-home"></i> home</a>
 <br/>
 <div class="text-center">
-  <h3>title</h3>
-    <p class="text-muted">description..................</p>
+  <h3>Effat University Tech Society (EUTS) Website</h3>
+    <p class="text-muted"></p>
 </div>
 </div>
