--- a/index.html
+++ b/index.html
@@ -43,22 +43,22 @@
 	
 	@font-face {
 		font-family: Raven;
-		src: url(raven.ttf);
+		src: url(fonts/raven.ttf);
 	}
 	
 	@font-face {
 		font-family: HomemadeApples;
-		src: url(homeapples.ttf);
+		src: url(fonts/homeapples.ttf);
 	}
 	
 	@font-face {
 		font-family: Cartoon;
-		src: url(cartoon.ttf);
+		src: url(fonts/cartoon.ttf);
 	}
 	
 	@font-face {
 		font-family: AlexBrush;
-		src: url(brush.ttf);
+		src: url(fonts/brush.ttf);
 	}
 	
 	</style>
@@ -73,13 +73,9 @@
 		<div class="introduction"> Welcome to my codeing challenges page! Feel free to look around. </div>
 		
 		<div class="links"> 
-		
-		<datalist>
 			<li> <a href="http://www.google.com"> Google.com </a> </li>
-			
-		</datalist>
+		</div>
 		
-		 </div>
 	</div>
 		
 	</body>
