Added youtube link

--- a/index.html
+++ b/index.html
@@ -260,13 +260,13 @@
 
     <div class="icon-container">
         <div class="icon-wrapper">
-            <div class="linkedin-icon"></div>
-            <div class="label"> <a href="https://www.linkedin.com/in/yumnaazizansari/">LinkedIn </a></div>
+            <a href="https://www.linkedin.com/in/yumnaazizansari/"><div class="linkedin-icon"></div>
+            <div class="label"> LinkedIn </a></div>
         </div>
         
         <div class="icon-wrapper">
-            <div class="youtube-icon"></div>
-            <div class="label"><a href="https://www.linkedin.com/in/yumnaazizansari/">YouTube</a></div>
+            <a href="https://www.youtube.com/@yumnaansari"><div class="youtube-icon"></div>
+            <div class="label">YouTube</a></div>
         </div>
 
   </div>
