Removed the zombies

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
   <div class="links">
     <a href="https://themuslimahtigress.blogspot.com/" class="button"><span>My Blog</span></a>
     <a href="BunnyTrouble.html" class="button"><span>Bunny Trouble!</span></a> 
-    <a href="https://morning-duas-for-zombie-apocolopyse.netlify.app/" class="button"><span>Zombie Adkar Website</span></a>
+    <a href="https://morning-duas-for-zombie-apocolopyse.netlify.app/" class="button"><span>Adkar Website</span></a>
     <a href="https://github.com/doubleoseven" class="button"><span>Github</span></a>
     
   </div>
