--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>DoubleOSevenMakes</title>
   <style>
+    /* ==== DoubleOSeven | Warm Minimal Aesthetic ==== */
+
     * {
       margin: 0;
       padding: 0;
@@ -16,225 +18,190 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: center;
-      background: linear-gradient(135deg, #667eea 0%, #764ba2 50%, #f093fb 100%);
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-      padding: 40px 20px;
+      justify-content: flex-start;
+      background-color: #f8f5f2;
+      font-family: 'Inter', 'Helvetica Neue', sans-serif;
+      padding: 60px 20px;
+      color: #3b3b3b;
+      line-height: 1.75;
     }
 
     h1 {
-      font-size: 3rem;
-      color: white;
+      font-size: 2.4rem;
+      color: #2e2e2e;
+      font-weight: 600;
       margin-bottom: 30px;
-      text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
+      letter-spacing: -0.5px;
       text-align: center;
     }
 
     .wrap {
-      background: rgba(255, 255, 255, 0.15);
-      backdrop-filter: blur(10px);
-      border-radius: 20px;
-      padding: 30px 40px;
+      background: #fffaf6;
+      border-radius: 16px;
+      padding: 35px 40px;
       margin-bottom: 40px;
-      max-width: 800px;
-      box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
+      max-width: 700px;
+      width: 100%;
+      box-shadow: 0 3px 15px rgba(0, 0, 0, 0.05);
+      text-align: center;
+      transition: transform 0.2s ease, box-shadow 0.3s ease;
+      border: 1px solid #f0eae4;
+    }
+
+    .wrap:hover {
+      transform: translateY(-2px);
+      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.06);
     }
 
     .wrap h2 {
-      font-size: 1.5rem;
-      color: white;
-      text-align: center;
-      line-height: 1.6;
+      font-size: 1.15rem;
       font-weight: 400;
+      color: #4b4b4b;
+      line-height: 1.8;
+    }
+
+    .wrap a {
+      color: #9a6d3c;
+      text-decoration: none;
+      border-bottom: 1px solid rgba(154, 109, 60, 0.3);
+      transition: color 0.2s ease, border 0.2s ease;
+    }
+
+    .wrap a:hover {
+      color: #7d532a;
+      border-bottom-color: #7d532a;
     }
 
     .links {
       display: flex;
       flex-wrap: wrap;
-      gap: 20px;
+      gap: 15px;
       align-items: center;
       justify-content: center;
-      max-width: 900px;
+      margin-bottom: 50px;
     }
 
     .button {
-      position: relative;
       display: inline-block;
-      padding: 16px 32px;
-      font-size: 16px;
-      font-weight: 600;
-      color: white;
+      padding: 14px 28px;
+      font-size: 15px;
+      font-weight: 500;
+      color: #3b3b3b;
       text-decoration: none;
-      border: none;
+      border: 1px solid #e6dcd2;
       border-radius: 12px;
-      background: linear-gradient(135deg, #f093fb 0%, #f5576c 100%);
-      cursor: pointer;
-      overflow: hidden;
-      transition: transform 0.2s ease, box-shadow 0.3s ease;
-      box-shadow: 0 4px 15px rgba(245, 87, 108, 0.4);
-    }
-
-    .button::before {
-      content: '';
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: linear-gradient(135deg, #f5576c 0%, #f093fb 100%);
-      opacity: 0;
-      transition: opacity 0.3s ease;
-    }
-
-    .button:hover::before {
-      opacity: 1;
+      background-color: #fffaf6;
+      transition: all 0.25s ease;
     }
 
     .button:hover {
+      background-color: #f2ebe6;
+      border-color: #d8ccc2;
       transform: translateY(-2px);
-      box-shadow: 0 6px 25px rgba(245, 87, 108, 0.6);
     }
-
-    .button:active {
-      transform: translateY(0);
-    }
-
-    .button span {
-      position: relative;
-      z-index: 1;
-    }
-
 
     .Contact {
-            background-color: linear-gradient(135deg, #667eea 0%, #764ba2 50%, #f093fb 100%);
-            border: 1px solid #30363d;
-            border-radius: 10px;
-            padding: 20px 30px;
-            max-width: 500px;
-            max-height:400px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
-            font-size: 20px;
-            line-height: 1.0;
-            text-align: center;
-            margin-top: 15px;
+      background-color: #fffaf6;
+      border-radius: 12px;
+      padding: 25px 30px;
+      box-shadow: 0 2px 12px rgba(0, 0, 0, 0.05);
+      font-size: 16px;
+      line-height: 1.5;
+      text-align: center;
+      max-width: 500px;
+      margin-bottom: 40px;
+      border: 1px solid #f0eae4;
+    }
 
-        }
+    .Contact h3 {
+      color: #2e2e2e;
+      margin-bottom: 15px;
+      font-weight: 600;
+    }
 
-        .Contact a {
-            color: #58a6ff;
-            text-decoration: none;
-            transition: color 0.2s ease;
-            font-weight: 500;
-        }
+    .Contact a {
+      color: #9a6d3c;
+      text-decoration: none;
+      transition: color 0.2s ease;
+      font-weight: 500;
+    }
 
-        .Contact a:hover {
-            color: #79c0ff;
-            text-decoration: underline;
-        }
+    .Contact a:hover {
+      color: #7d532a;
+      text-decoration: underline;
+    }
 
-  
-        h3 {
-          color: white;
-        }
+    .icon-container {
+      display: flex;
+      flex-direction: row;
+      gap: 30px;
+      justify-content: center;
+      margin-top: 20px;
+    }
 
-          /* LinkedIn Icon */
-        .linkedin-icon {
-            width: 60px;
-            height: 60px;
-            background: #0077b5;
-            border-radius: 12px;
-            position: relative;
-            cursor: pointer;
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
-            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
-        }
+    .icon-wrapper {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
 
-        .linkedin-icon:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 12px 30px rgba(0, 0, 0, 0.4);
-        }
+    .linkedin-icon, .youtube-icon {
+      width: 50px;
+      height: 50px;
+      border-radius: 12px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: white;
+      font-size: 26px;
+      font-weight: bold;
+      font-family: Arial, sans-serif;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
 
-        .linkedin-icon::before {
-            content: 'in';
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            color: white;
-            font-size: 42px;
-            font-weight: bold;
-            font-family: Arial, sans-serif;
-        }
+    .linkedin-icon {
+      background: #0077b5;
+    }
 
-        /* YouTube Icon */
-        .youtube-icon {
-            width: 60px;
-            height: 60px;
-            background: #FF0000;
-            border-radius: 12px;
-            position: relative;
-            cursor: pointer;
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
-            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
-        }
+    .youtube-icon {
+      background: #ff0000;
+    }
 
-        .youtube-icon:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 12px 30px rgba(0, 0, 0, 0.4);
-        }
+    .linkedin-icon:hover, .youtube-icon:hover {
+      transform: translateY(-3px);
+      box-shadow: 0 8px 18px rgba(0, 0, 0, 0.2);
+    }
 
-        /* Play button triangle */
-        .youtube-icon::before {
-            content: '';
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-40%, -50%);
-            width: 0;
-            height: 0;
-            border-left: 25px solid white;
-            border-top: 15px solid transparent;
-            border-bottom: 15px solid transparent;
-        }
+    .label {
+      color: #5c5c5c;
+      margin-top: 8px;
+      font-size: 13px;
+      font-weight: 500;
+    }
 
-               .label {
-            text-align: center;
-            color: white;
-            margin-top: 15px;
-            font-size: 14px;
-            font-weight: 600;
-        }
+    /* Soft fade-in animation */
+    body {
+      opacity: 0;
+      animation: fadeIn 0.8s ease forwards;
+    }
 
-        .icon-wrapper {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-
-        .icon-container {
-    display: flex;
-    flex-direction: row;
-    gap: 30px;
-    justify-content: center;
-    margin-top: 20px;
-}
+    @keyframes fadeIn {
+      to { opacity: 1; }
+    }
 
     @media (max-width: 768px) {
       h1 {
         font-size: 2rem;
       }
-
       .wrap {
-        padding: 20px;
+        padding: 22px;
       }
-
       .wrap h2 {
-        font-size: 1.2rem;
+        font-size: 1.05rem;
       }
-
       .button {
-        padding: 14px 24px;
         font-size: 14px;
+        padding: 12px 20px;
       }
     }
   </style>
@@ -243,33 +210,35 @@
   <h1>DoubleOSevenMakes</h1>
   
   <div class="wrap">
-    <h2>Welcome to my page - where I showcase some of my personal projects!</h2>
+    <h2>
+      Welcome to my page — a warm little corner where I share my projects, writings and quiet experiments.
+      Click <a href="AboutMe.html">here</a> to learn more about me.
+    </h2>
   </div>
   
   <div class="links">
-    <a href="https://themuslimahtigress.blogspot.com/" class="button"><span>My Blog</span></a>
-    <a href="BunnyTrouble.html" class="button"><span>Bunny Trouble!</span></a> 
-    <a href="https://morning-duas-for-zombie-apocolopyse.netlify.app/" class="button"><span>Adkar Website</span></a>
-    <a href="https://github.com/doubleoseven" class="button"><span>Github</span></a>
-    
+    <a href="https://themuslimahtigress.blogspot.com/" class="button">My Blog</a>
+    <a href="BunnyTrouble.html" class="button">Bunny Trouble!</a>
+    <a href="https://morning-duas-for-zombie-apocolopyse.netlify.app/" class="button">Adkar Website</a>
+    <a href="https://github.com/doubleoseven" class="button">Github</a>
   </div>
-  <br>
 
-  <div class = "Contact">
-    <h3>Contact Me: </h3>
-
+  <div class="Contact">
+    <h3>Contact Me</h3>
     <div class="icon-container">
-        <div class="icon-wrapper">
-            <a href="https://www.linkedin.com/in/yumnaazizansari/"><div class="linkedin-icon"></div>
-            <div class="label"> LinkedIn </a></div>
-        </div>
-        
-        <div class="icon-wrapper">
-            <a href="https://www.youtube.com/@yumnaansari"><div class="youtube-icon"></div>
-            <div class="label">YouTube</a></div>
-        </div>
-
-  </div>
+      <div class="icon-wrapper">
+        <a href="https://www.linkedin.com/in/yumnaazizansari/">
+          <div class="linkedin-icon">in</div>
+          <div class="label">LinkedIn</div>
+        </a>
+      </div>
+      <div class="icon-wrapper">
+        <a href="https://www.youtube.com/@yumnaansari">
+          <div class="youtube-icon">▶</div>
+          <div class="label">YouTube</div>
+        </a>
+      </div>
+    </div>
   </div>
 </body>
 </html>
