Removed links and updated about me

--- a/index.html
+++ b/index.html
@@ -211,17 +211,17 @@
   
   <div class="wrap">
     <h2>
-      Welcome to my page — a warm little corner where I share my projects, writings and quiet experiments.
+      Welcome to my page — a quiet little corner of the web, where I share my projects, writings and quiet experiments.
       Click <a href="AboutMe.html">here</a> to learn more about me.
     </h2>
   </div>
   
-  <div class="links">
+ <!--  <div class="links">
     <a href="https://themuslimahtigress.blogspot.com/" class="button">My Blog</a>
     <a href="BunnyTrouble.html" class="button">Bunny Trouble!</a>
-    <a href="https://morning-duas-for-zombie-apocolopyse.netlify.app/" class="button">Adkar Website</a>
+    <a href="https://duas-for-zombie-apocolypse.netlify.app"class="button">Adkar Website</a>
     <a href="https://github.com/doubleoseven" class="button">Github</a>
-  </div>
+  </div> -->
 
   <div class="Contact">
     <h3>Contact Me</h3>
